--- a/package.json
+++ b/package.json
@@ -92,6 +92,10 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.10.2",
+    "@mui/material": "^5.10.2",
     "electron-squirrel-startup": "^1.0.0",
     "ps-node": "^0.1.6",
     "react": "^18.2.0",
