Introduced electron store and storing cwd

--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.1.0",
     "ps-node": "^0.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
